# startup_os

./: .gitignore  .pre-commit-config.yaml  AGENTS.md
.codex/rules/: startupos.md
.github/workflows/: experimentation-service.yml
api_gateway/: AGENTS.md
dashboard_service/: AGENTS.md
docs/: architecture.md  decisions-and-plan.md  domain.md  product.md
experimentation_service/: .dockerignore  AGENTS.md  Dockerfile  alembic.ini  compose.yaml  main.py  outbox_worker.py  pyproject.toml
experimentation_service/src/api/grpc/: errors.py  experimentation_service.py  logging.py  server.py
experimentation_service/src/application/: errors.py
experimentation_service/src/application/commands/: hypothesis.py
experimentation_service/src/application/interfaces/: repositories.py  unit_of_work.py
experimentation_service/src/application/workers/: outbox_publisher.py
experimentation_service/src/core/: config.py  logging.py  logging_context.py
experimentation_service/src/domain/experiment/: aggregate.py  entities.py  events.py  value_objects.py
experimentation_service/src/domain/hypothesis/: aggregate.py  events.py  value_objects.py
experimentation_service/src/domain/initiative/: aggregate.py  events.py  value_objects.py
experimentation_service/src/domain/shared/: aggregate.py  entity.py  events.py  time.py  value_object.py
experimentation_service/src/domain/task/: aggregate.py  events.py  value_objects.py
experimentation_service/src/infrastructure/: di.py
experimentation_service/src/infrastructure/db/: unit_of_work.py
experimentation_service/src/infrastructure/db/mappers/: experiment.py  hypothesis.py  initiative.py  outbox.py  task.py
experimentation_service/src/infrastructure/db/migrations/: env.py
experimentation_service/src/infrastructure/db/migrations/versions/: 6f339686319a_create_experimentation_tables.py  8f7a2d91c4b0_add_outbox_publish_retry_fields.py
experimentation_service/src/infrastructure/db/models/: __init__.py  experiment.py  hypothesis.py  initiative.py  outbox.py  task.py
experimentation_service/src/infrastructure/db/repositories/: base.py  experiment.py  hypothesis.py  initiative.py  outbox.py  task.py
experimentation_service/src/infrastructure/kafka/: publisher.py
experimentation_service/tests/: test_logging.py  test_main.py
experimentation_service/tests/application/: conftest.py  test_formulate_hypothesis.py
experimentation_service/tests/domain/: test_experiment.py  test_experiment_time.py  test_hypothesis.py  test_initiative.py  test_task.py
experimentation_service/tests/e2e/: test_formulate_hypothesis_grpc.py
experimentation_service/tests/infrastructure/: test_kafka_publisher.py  test_outbox_worker.py
experimentation_service/tests/support/: fakes.py
goals_service/: go.mod
knowledge_service/: AGENTS.md
notification_service/: AGENTS.md
proto/startupos/experimentation/v1/: experimentation_service.proto
strategy_goals_service/: AGENTS.md
workspace_service/: AGENTS.md
